force-app/main/default/objects/Case/fields/A360_Animal__c.field-meta.xml
<CustomField>
    <fullName>A360_Animal__c</fullName>
    <description>Animal context linked to the case.</description>
    <label>A360 Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>