force-app/main/default/objects/Case/fields/A360_Case_Context__c.field-meta.xml
<CustomField>
    <fullName>A360_Case_Context__c</fullName>
    <description>Operational context for the case.</description>
    <label>A360 Case Context</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>General Care</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Behaviour</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>