force-app/main/default/objects/Case/fields/A360_Episode__c.field-meta.xml
<CustomField>
    <fullName>A360_Episode__c</fullName>
    <description>Episode context linked to the case.</description>
    <label>A360 Episode</label>
    <referenceTo>Animal_Episode__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>