force-app/main/default/objects/Case/fields/A360_Housing_Unit__c.field-meta.xml
<CustomField>
    <fullName>A360_Housing_Unit__c</fullName>
    <description>Housing unit context linked to the case.</description>
    <label>A360 Housing Unit</label>
    <referenceTo>Housing_Unit__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>